--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
   },
   "homepage": "https://github.com/gsong/express-react-project-starter#readme",
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "npm-run-all": "^4.1.5",
+    "react-animated-slider": "^1.1.4",
+    "react-bootstrap": "^1.6.4",
+    "react-native-web": "^0.17.5",
+    "react-responsive-carousel": "^3.2.21",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
